Fix overflow scroll issue on mobile

--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -367,7 +367,9 @@ body {
 }
 
 #main {
-	overflow: auto;
+	@media #{$small-only, $medium-only} {
+		overflow: auto;
+	}
 }
 
 .content {
